--- a/Assets/CSS/piestyle.css
+++ b/Assets/CSS/piestyle.css
@@ -1,3 +1,6 @@
+#home {
+    font-size: 20px;
+}
 
 h2 {
     font-family: "Tourney", sans-serif;
@@ -9,16 +12,18 @@ h2 {
     margin: 20px 0 0 0;
 }
 
+p {
+    color: white;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+
 .center-container {
     display: flex;
-    justify-content: center;
     align-items: center;
 }
 
 .piecontainer {
-   text-align: center;
-}
-
-#pieChart {
-    align-items: center;
+   margin-left: 150px;
 }
