--- a/Assets/CSS/treestyle.css
+++ b/Assets/CSS/treestyle.css
@@ -18,3 +18,11 @@ p {
     font-family: Arial, Helvetica, sans-serif;
 
 }
+
+.main-container {
+    width: 100%;
+    height: 100vh; /* This ensures the container takes up the full height of the viewport */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
