changed some tree styling

--- a/Assets/CSS/treestyle.css
+++ b/Assets/CSS/treestyle.css
@@ -21,10 +21,13 @@ p {
 
 .main-container {
     width: 100%;
-    height: 100vh; /* This ensures the container takes up the full height of the viewport */
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#collapsibleTree {
+    margin-top: 75px;
 }
 
 /* Apply styles to nodes */
@@ -42,6 +45,6 @@ p {
 /* Apply styles to links */
 .link {
     fill: none;
-    stroke: #ccc; /* Link color */
+    stroke: #fe019a; /* Link color */
     stroke-width: 1; /* Link width */
 }
