--- a/Assets/CSS/barstyle.css
+++ b/Assets/CSS/barstyle.css
@@ -16,5 +16,15 @@ p {
     color: white;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+}
 
+.barGraphContainer {
+    width: 100%;
+    height: 500px;
+    margin: auto;
+}
+
+#barGraph {
+    width: 100%; 
+    height: 100%;
 }
