--- a/Assets/CSS/barstyle.css
+++ b/Assets/CSS/barstyle.css
@@ -28,3 +28,9 @@ p {
     width: 100%; 
     height: 100%;
 }
+
+.legend text {
+    fill: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px; /* Adjust font size as needed */
+  }
